--- a/bootstrap/index.css
+++ b/bootstrap/index.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -66,8 +66,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
-*{
+}
+/* *{
   margin: 0;
   padding: 0;
 }
@@ -76,5 +76,5 @@ button:focus-visible {
 }
 .nav-link:hover{
   color: brown;
-}
+} */
 
